[package]
name = "control_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version ="1.36.0", features = ["rt-multi-thread", "net"] }
common = { path = "../common" }
serde = { version = "1.0.196", features = ["derive"] }
lazy_static = "1.4.0"
tower = "0.4.13"
tower-http = {version = "0.5.1", features = ["fs"] }
